# cmake_task

./: CMakeLists.txt
src/: CMakeLists.txt  kat.cpp  main.cpp
tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  main
